--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ textarea {
   resize: none; }
 
 .heading-primary {
-  font-size: 6rem;
+  font-size: 5.2rem;
   text-transform: uppercase;
   letter-spacing: 3px;
   text-align: center; }
@@ -113,7 +113,7 @@ textarea {
 
 .heading-sec__sub {
   display: block;
-  text-align: center;
+  text-align: left;
   color: #777;
   font-size: 2rem;
   font-weight: 500;
